--- a/index.html
+++ b/index.html
@@ -36,18 +36,21 @@
      <div id="content-body">
             <div class="container">
 
-						<div class"experience-overview">
-      <div class="row">
+<div id="experience-overview">
+   <div id="content-header">
+	   <h1> Overview	</h1>
+	</div>
+
+	   <div class="row">
         <div class="col-lg-12">
-          <h2>Overview</h2>
           <p>Innovative, forward-thinking leader with proven experience in achieving organizational objectives in complex environments through strategic planning, community engagement, organizational leadership, creative problem solving, and collaborative solutions. Expertise includes bridging multiple divides internally and externally to work across all channels.</p>
         </div>
       </div>
       </div>
 
-      <div id="content-professional"> 
-					<div id="content-professionalheader">
-						Professional Experience
+      <div id="experience-professional"> 
+					<div id="content-header">
+						<h1>Professional Experience</h1>
 					</div>
         
 					<div id="content-blackstar">
