--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 
       <div class="jumbotron">
             <div class="container">
+	<div class="intro">
         <h1>Mohamed H. Mohamed</h1>
         <p class="lead">(651) 621-0914 | mohamedtwice@gmail.com</p>
+      </div>
       </div>
       </div>
       </div>
