--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="jumbotron">
             <div class="container">
-	<div class="intro">
+	<div class="jumbotronintro">
         <h1>Mohamed H. Mohamed</h1>
         <p class="lead">(651) 621-0914 | mohamedtwice@gmail.com</p>
       </div>
@@ -121,7 +121,9 @@
 								</ul>	
 						</div>
 					</div>
-        
+					</div>
+					</div>
+					</div>        
       <footer class="footer">
         <p>&copy; 2017 Mohamed H. Mohamed</p>
       </footer>
