--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 						</div>
 					</div>
 					</div>
+					</div>
 		    
       <footer class="footer">
         <p>&copy; 2017 Mohamed H. Mohamed</p>
