--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
 					</div>
 		    
       <footer class="footer">
+            <div class="container">	      
         <p>&copy; 2017 Mohamed H. Mohamed</p>
+	</div>
+
       </footer>
 
     </div> <!-- /container -->
