--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="jumbotron">
             <div class="container">
-	<div class="jumbotronintro">
+	<div id="jumbotronintro">
         <h1>Mohamed H. Mohamed</h1>
         <p class="lead">(651) 621-0914 | mohamedtwice@gmail.com</p>
       </div>
