--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     
      <div id="content-body">
             <div class="container">
-
+ <h1>Mohamed H. Mohamed</h1>
+        <p class="lead">(651) 621-0914 | mohamedtwice@gmail.com</p>
 <div id="experience-overview">
    <div id="content-header">
 	   <h1> Overview	</h1>
