--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
 	   <div class="row">
         <div class="col-lg-12">
-		<p><b>University of St. Thomas, Opus College of Business</b> – Master of Business Administration,<i>expected 2018</i></p>
-		<p><b>University of Minnesota, Twin Cities </b> – Bachelor of Arts in History,<i>2009</i></p>
+		<p><b>University of St. Thomas, Opus College of Business</b> – Master of Business Administration, <i>expected 2018</i></p>
+		<p><b>University of Minnesota, Twin Cities </b> – Bachelor of Arts in History, <i>2009</i></p>
         </div>
       </div>
       </div>
@@ -171,10 +171,10 @@
 
 	   <div class="row">
         <div class="col-lg-12">
-		<p>Board of Directors, <b>Neighborhoods Organizing for Change</b> – 2013 to present</p>
-		<p>Board of Directors, <b>Twin Cities Media Alliance</b> – 2015 to present</p>
-		<p>Member, <b>National Black MBA Association</b></p>
-		<p>Member, <b>Kappa Alpha Psi Fraternity</b></p>
+		<p><b>Board of Directors</b>, Neighborhoods Organizing for Change – 2013 to present</p>
+		<p><b>Board of Directors</b>, Twin Cities Media Alliance – 2015 to present</p>
+		<p><b>Member</b>, <b>National Black MBA Association</p>
+		<p><b>Member</b>, <b>Kappa Alpha Psi Fraternity</p>
         </div>
       </div>
       </div>
